Fix contact us section spacing

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -423,7 +423,6 @@ header .navigation a:hover{
 }
 
 .about-us .about-one-img{
-	width:300px;
 	float:left;
   margin-right:20px;
 }
